<resources>
    <string name="app_name">ecse321-group7</string>
    <string name="action_settings">Settings</string>
    <string name="Tap_here_to_login">"Type here to login"</string>
    <string name="Or">"Or"</string>
    <string name="Passenger">Passenger</string>
    <string name="SignUp">"Sign Up"</string>
    <string name="Login">"Login"</string>
    <string name="desc">"login icon"</string>
    <string name="email">"    Email"</string>
    <string name="password">"    Password"</string>
    <string name="title_activity_user_login">User_login</string>
    <string name="title_activity_user__signup">User_Signup</string>
    <string name="FirstName">"    First Name"</string>
    <string name="LastName">"    Last Name"</string>
    <string name="Phone_no">"    Phone Number"</string>
    <string name="title_activity_profile_page">Profile_page</string>
    <string name="departure">Where from?</string>
    <string name="destination">Where to?</string>
    <string name="departure_date">When?</string>
    <string name="title_activity_trip_search">Trip_Search</string>
    <string name="newevent_date_label">Date?</string>
    <string name="newevent_date_first">Some Date</string>
    <string name="yourtrips">Your Trips</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
</resources>
